rnsc/tests/snapshots/error-lexer-directives-dot_dot_super.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
dot_dot_super ..super
----- STDERR -----
Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/dot_dot_super.rns:1:15 ]
   │
 1 │ dot_dot_super ..super
   │               ───┬───  
   │                  ╰───── did you mean '.super' ?
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
